<resources>
    <string name="app_name">GOQiiActive</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">WELCOME</string>
    <string name="createaccount">CREATE AN ACCOUNT</string>
    <string name="terms_conditions_text">by clicking this you agree to our</string>
    <string-array name="navigation_items">
        <item>Profile</item>
        <item>Upcoming Activities</item>
        <item>History</item>
        <item>Referral</item>
        <item>Favorite Gyms</item>
        <item>Help</item>
    </string-array>
    <string name="ic_profile">&#xf007;</string>
    <string name="ic_upcoming">&#xf271;</string>
    <string name="ic_history">&#xf1da;</string>
    <string name="ic_referral">&#xf0c0;</string>
    <string name="ic_favorite">&#xf006;</string>
    <string name="ic_help">&#xf059;</string>
    <string name="ic_my_location">&#xf041;</string>
    <string name="ic_chevron">&#xf054;</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Navigation drawer opened</string>
    <string name="drawer_close">Navigation drawer closed</string>
    <string name="iFeelLike">I Feel Like</string>
    <string name="placesnearby">NearBy</string>
    <string name="buy">Buy</string>
    <string name="select_category">Choose a Category (OR) </string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Lat Long</string>
    <string name="no_address_found">No Address found</string>
    <string name="address_found">Address Found</string>
    <string name="search_title">Search</string>
    <string name="explore">Explore Favourites </string>
    <string name="choose_favorite">No favourites selected</string>
    <string name="favorite_off">&#xf08a;</string>
    <string name="favorite_on">&#xf004;</string>
    <string name="filter">&#xf0b0;</string>
    <string name="no_Slots_text">No Slots Available. Try some other day</string>
    <string name="allday_text">All Day</string>
    <string name="about">About</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="towel">Towel</string>
    <string name="id_proof">Photo ID</string>
    <string name="mat">Mat</string>
    <string name="things_to_carry">Things to Carry</string>
    <string name="title_activity_activity_details">ActivityDetailsActivity</string>

    <string name="expires_on">Expires on :</string>
    <string name="training_slide_button">GET STARTED</string>
    <string name="verify_number">VERIFY PHONE NUMBER</string>
    <string name="verify_hint">Generate a one time password</string>
    <string name="enter_phone_hint">ENTER PHONE NUMBER</string>
    <string name="phone_comment">Number will be used to send booking confirmation</string>
    <string name="email_hint">ENTER EMAIL</string>
    <string name="name_hint">ENTER NAME</string>
    <string name="enterOtp">Enter the One Time Passcode (OTP)  sent as SMS to </string>
    <string name="otp_hint">ENTER OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="otp_empty">OTP is empty!</string>
    <string name="otp_sent_to">OTP Sent to :</string>
    <string name="edit">Edit</string>
    <string name="name_comment">Enter name is as in Photo ID</string>
    <string name="enter_phone_hint2">Enter details and press \'Verify\' to continue</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_up">SIGN UP</string>
    <string name="loginRequired">Login Required</string>
    <string name="login_warning_text">You have to be logged in to book an Activity</string>

    <!-- Validator -->
    <string name="view_on_github">GITHUB</string>
    <string name="sample_activity_form_is_valid">Form is valid</string>
    <string name="lib_name">Z-Validations</string>
    <string name="zvalidations_not_positive_integer">Field should be positive integer</string>
    <string name="zvalidations_empty">Field could not be empty</string>
    <string name="zvalidations_not_in_range">Field should be between %1$d and %2$d</string>
    <string name="zvalidations_not_email">Value is not valid email address</string>

    <!-- Login Activity -->

    <string name="invalid_details">"Invalid Details"</string>
    <string name="please_try_again">"Please try again"</string>
    <string name="facebook_app_id">635708873232584</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_edit_user">Edit Profile</string>
    <!--GCM-STRING-->
    <string name="gcm_sender_id">75899056408</string>
    <!--Referral-->
    <string name="referralString">Use your Referral Code and get exciting offers!!</string>
    <string name="refer_title">Refer a friend</string>
    <string name="refer_string">Free Classes</string>
    <string name="referButton">REFER  </string>
    <string name="upcoming_string">Upcoming</string>
    <string name="history_string">History</string>
    <string name="favorites_string">Favorites</string>
    <string name="help_string">Help</string>
    <string name="title_activity_signUp">Sign Up</string>
    <string name="buySubs_string">Buy Subscription</string>
    <string name="title_activity_gym_details">Gym Details</string>
    <string name="rateusString">Rate Us</string>
    <string name="couldnt_launch_market">Sorry! Could not open Google Play!</string>
    <string name="current_plan">Current Plan :</string>
    <string name="address">Address</string>
    <string name="title_activity_forgotpassword">FORGOT PASSWORD</string>
    <string name="action_fav">Mark as favourite</string>
    <string name="title_activity_buy_subscription">Buy Subscription</string>
    <string name="title_activity_imageDisplayActivity">Image Display</string>
    <string name="home_string">Home</string>
    <string name="ok_button_label">Select</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="demo_min_label"></string>
    <string name="demo_max_label" />
    <string name="about_activity">About Activity</string>
    <string name="places_hint">Type here or Long-Press on Map to change location</string>
    <string name="welcome_title">Welcome To Fiticket</string>
    <string name="welcome_msg">As a first time user, you can enjoy \n FREE CLASSES.</string>

</resources>
