<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Platinum"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/enter_phone_hint2"/>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/Black"
            android:ems="10"
            android:hint="@string/name_hint"
            android:imeOptions="flagNoExtractUi"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:singleLine="true" >

        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/name_comment"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

<EditText
    android:id="@+id/edtphone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@drawable/rounded_edittext"
    android:ems="10"
    android:maxLength="10"
    android:textColor="@color/Black"
    android:imeOptions="flagNoExtractUi"
    android:hint="@string/enter_phone_hint"
    android:inputType="number"
    android:padding="10dp"
    android:singleLine="true" />
        <TextView
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_comment"/>
</LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        style="@style/LoginWidget"
        android:background="@drawable/rounded_button_fiticket"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/verify_number"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

</LinearLayout>