<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/enterOtp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        />
        <Button
            android:id="@+id/btn_edit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>
    </LinearLayout>
    <LinearLayout
      style="@style/LoginWidget"
        android:background="@drawable/rounded_edittext">

        <EditText
            android:id="@+id/edtOtp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:ems="10"
            android:textColor="@color/Black"
            android:hint="@string/otp_hint"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </LinearLayout>
    <Button
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/resend_btn"
        android:background="@drawable/yellow_border_button"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/resend_otp"
        android:textColor="#ffffff"/>
    <Button
        android:layout_marginBottom="20dp"
        android:id="@+id/submit_btn"
        style="@style/LoginWidget"
        android:background="@drawable/rounded_button_fiticket"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <Button
        android:layout_marginBottom="20dp"
        android:id="@+id/cancel_btn"
        style="@style/LoginWidget"
        android:background="@drawable/yellow_border_button"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>